# Disco

./: .editorconfig  CHANGELOG.md  Cargo.toml  README.md
etc/completions/fish/: disco.fish
etc/completions/zsh/: _disco
etc/services/openrc/: disco
etc/services/runit/: run
etc/services/systemd/: disco.service
src/: activity.rs  command.rs  library.rs  lua.rs  main.rs
